rfc-errata (0.2.0) distribution(s); urgency=low

	* Fixed an error when specifying the html directory.

-- Jim Schaad <ietf@augustcellars.com>  Mon 22 July 2019 12:00:00 -0800

rfc-errata (0.1.5) distribution(s); urgency=low

	* RFC Editor requested some changes in how the templates are worded
	* Fixed corner case where an entire section can disappear
	* Return a count of errors
	* Fix an error with a None field for new text

-- Jim Schaad <ietf@augustcellars.com>  Tue 18 June 2019 12:00:00 -0800

rfc-errata (0.1.4) distribution(s); urgency=low

	* The text taken from the errata file input needs to be HTML quoted as well as the RFC
	* Make the single rfc command line parsing nicer

-- Jim Schaad <ietf@augustcellars.com>  Fri 31 May 2019 12:00:00 -0800

rfc-errata (0.1.3) distribution(s); urgency=low

	* Add better retry logic on HTTPS session failures.

-- Jim Schaad <ietf@augustcellars.com>  Fri 17 May 2019 12:00:00 -0800

rfc-errata (0.1.2) distribution(s); urgency=low

	* Rename directory to closer match the app name
	* Reuse the HTTPS session for effeciency

-- Jim Schaad <ietf@augustcellars.com>  Sat 11 May 2019 12:00:00 -0800

rfc-errata (0.1.1) distribution(s); urgency=low

	* Default char set on Linux is utf-8 not iso-8859-1, fix that as some of the RFCs are in that code page
	* Clean up some transformations on second chance matches

-- Jim Schaad <ietf@augustcellars.com>  Thur 9 May 2019 12:00:00 -0800

rfc-errata (0.1.0) distribution(s); urgency=low

	* Make it run correctly on Linux systems

-- Jim Schaad <ietf@augustcellars.com>  Thur 9 May 2019 12:00:00 -0800

rfc-errata (0.0.2) distribution(s); urgency=low

	* Correct secondary distribution code (--copyto)

-- Jim Schaad <ietf@augustcellars.com>  Thur 9 May 2019 12:00:00 -0800

rfc-errata (0.0.1) distribution(s); urgency=low

	* INITIAL VERSION

-- Jim Schaad <ietf@augustcellars.com>  Sun 21 Apr 2019 12:00:00 -0800