@@ -18,10 +18,16 @@
     </head>
     <body>
         <div class='Verified-headnote-styling'>
+<span style="font-weight: bold;">This is a purely informative rendering of an RFC that includes verified errata.  This rendering may not be used as a reference.</span>
+<br/>
+<br/>
 The following 'Verified' errata have been incorporated in this document:
  <a href='#btn_2'>EID 2</a>
 </div>
 <div class='Reported-headnote-styling'>
+<span style="font-weight: bold;">This is a purely informative rendering of an RFC that includes verified errata.  This rendering may not be used as a reference.</span>
+<br/>
+<br/>
 The following 'Reported' errata have been incorporated in this document:
  <a href='#btn_2'>EID 1</a>
 </div>
