@@ -18,6 +18,9 @@
     </head>
     <body>
         <div class='Verified-headnote-styling'>
+<span style="font-weight: bold;">This is a purely informative rendering of an RFC that includes verified errata.  This rendering may not be used as a reference.</span>
+<br/>
+<br/>
 The following 'Verified' errata have been incorporated in this document:
  <a href='#btn_1'>EID 1</a>
 </div>
