@@ -1,4 +1,7 @@
 <div class='$status_tag-headnote-styling'>
+<span style="font-weight: bold;">This is a purely informative rendering of an RFC that includes verified errata.  This rendering may not be used as a reference.</span>
+<br/>
+<br/>
 The following '$status_tag' errata have been incorporated in this document:
 $errata_list
 </div>
